--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,5 @@
+VITE_API_BASEURL = http://localhost:7000
+
 VITE_AUTH0_CALLBACK_URL = http://localhost:5173
 VITE_AUTH0_CLIENT_ID = chjpJ5zWPJaFbfFdZXg2KX5JOgLxPI4D
 VITE_AUTH0_DOMAIN = dev-rxwuxwwn576cklsj.us.auth0.com
