--- a/Backend/.env
+++ b/Backend/.env
@@ -2,3 +2,7 @@ MONGO = "mongodb+srv://admin:gzLYrVfwyMo6spL4@food-delivery-app.ysr8ebx.mongodb.
 
 AUTH0_AUDIENCE = QuickFoods-api
 AUTH0_ISSUER_BASE_URL = https://dev-rxwuxwwn576cklsj.us.auth0.com/
+
+CLOUDINARY_CLOUD_NAME=dhte3nnzm
+CLOUDINARY_API_KEY= 484725735335879
+CLOUDINARY_API_SECRET= K2IQANl7JENnC4ySoHxWw5wESM8
